--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
     "next-themes": "^0.3.0",
